[gd_scene load_steps=16 format=3 uid="uid://b6a5w6nr11p61"]

[ext_resource type="Script" uid="uid://biku4er35e7qj" path="res://Scripts/Level1.gd" id="1_efaka"]
[ext_resource type="Texture2D" uid="uid://ettryw5upctl" path="res://textures/PlainArrow.png" id="2_2ikme"]
[ext_resource type="Texture2D" uid="uid://c1ph0r0se8plw" path="res://textures/Tile.svg" id="3_sbajh"]
[ext_resource type="ArrayMesh" uid="uid://dbknctngpmx4x" path="res://3d-models/path.obj" id="4_0dpsq"]
[ext_resource type="Texture2D" uid="uid://b1kjnqe6gh0m3" path="res://textures/lock.svg" id="4_cf8id"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7hpab"]
albedo_texture = ExtResource("3_sbajh")
uv1_triplanar = true
uv2_world_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_8pw2q"]
material = SubResource("StandardMaterial3D_7hpab")
size = Vector3(50, 1, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_x47ao"]
size = Vector3(50, 1, 50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jnyg0"]
data = PackedVector3Array(-4, -1.4752, 4.784, -4, -1.945, 4.613, -4, 1.945, -4.613, -4, 1.945, -4.613, -4, -1.945, 4.613, -4, 1.4752, -4.784, 4, 1.945, -4.613, -4, 1.945, -4.613, 4, 1.945, -4.613, 4, 1.945, -4.613, -4, 1.945, -4.613, -4, 1.945, -4.613, 4, 1.945, -4.613, 4, 1.4752, -4.784, 4, -1.4752, 4.784, 4, -1.4752, 4.784, 4, 1.4752, -4.784, 4, -1.945, 4.613, 4, -1.4752, 4.784, 4, -1.945, 4.613, -4, -1.4752, 4.784, -4, -1.4752, 4.784, 4, -1.945, 4.613, -4, -1.945, 4.613, 4, 1.4752, -4.784, -4, 1.4752, -4.784, 4, -1.945, 4.613, 4, -1.945, 4.613, -4, 1.4752, -4.784, -4, -1.945, 4.613, -4, 1.945, -4.613, 4, 1.945, -4.613, -4, -1.4752, 4.784, -4, -1.4752, 4.784, 4, 1.945, -4.613, 4, -1.4752, 4.784, 4, 1.945, -4.613, -4, 1.945, -4.613, 4, 1.945, -4.613, 4, 1.945, -4.613, -4, 1.945, -4.613, -4, 1.945, -4.613, -4, 1.945, -4.613, -4, 1.4752, -4.784, -4, 1.945, -4.613, -4, 1.945, -4.613, -4, 1.4752, -4.784, -4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.945, -4.613, 4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.945, -4.613, 4, 1.945, -4.613, -4, 1.4752, -4.784, 4, 1.4752, -4.784, -4, 1.4752, -4.784, -4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.945, -4.613, 3.9983, 1.9452, -4.789, -4, 1.945, -4.613, -4, 1.4752, -4.784, -4, 1.945, -4.613, -4, 1.945, -4.613, -4, 1.4752, -4.784, -4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.945, -4.613, 4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.945, -4.613, 4, 1.945, -4.613, -4, 1.4752, -4.784, 4, 1.4752, -4.784, -4, 1.4752, -4.784, -4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.4752, -4.784, -4.0479, 1.4801, -9.6986, -4, 1.4752, -4.784, -4.0957, 1.4851, -14.6132, -4.0957, 1.4851, -14.6132, -4, 1.4752, -4.784, 3.9043, 1.4851, -14.6126, 3.9043, 1.4851, -14.6126, -4, 1.4752, -4.784, 4, 1.4752, -4.784, 4, 1.945, -4.613, -4, 1.945, -4.613, 3.9983, 1.9452, -4.789, 3.9983, 1.9452, -4.789, -4, 1.945, -4.613, 3.9026, 1.9551, -14.6125, 3.9026, 1.9551, -14.6125, -4, 1.945, -4.613, -4.0974, 1.9551, -14.6125, -4.0974, 1.9551, -14.6125, -4, 1.945, -4.613, -4.0495, 1.9502, -9.6984, -4.0495, 1.9502, -9.6984, -4, 1.945, -4.613, -4.0017, 1.9452, -4.7843, -4.0017, 1.9452, -4.7843, -4, 1.4752, -4.784, -4.0495, 1.9502, -9.6984, -4.0495, 1.9502, -9.6984, -4, 1.4752, -4.784, -4.0479, 1.4801, -9.6986, 3.9026, 1.9551, -14.6125, -4.0974, 1.9551, -14.6125, 3.9043, 1.4851, -14.6126, 3.9043, 1.4851, -14.6126, -4.0974, 1.9551, -14.6125, -4.0957, 1.4851, -14.6132, -15.0952, 1.4461, -14.5061, -15.0952, 1.4461, -19.5061, -15.0952, 1.4461, -14.5061, -15.0952, 1.4461, -14.5061, -15.0952, 1.4461, -19.5061, -15.0952, 1.4461, -19.5061, -4, 1.4752, -4.784, -4.0017, 1.9452, -4.7843, -4, 1.945, -4.613, 4, 1.4752, -4.784, 3.9983, 1.9452, -4.789, 3.9043, 1.4851, -14.6126, 3.9043, 1.4851, -14.6126, 3.9983, 1.9452, -4.789, 3.9026, 1.9551, -14.6125, -4.0957, 1.4851, -14.6132, -4.0974, 1.9551, -14.6125, -11.4871, 1.4589, -14.5412, -11.4871, 1.4589, -14.5412, -4.0974, 1.9551, -14.6125, -11.4884, 1.9289, -14.5405, -4.0479, 1.4801, -9.6986, -4.0957, 1.4851, -14.6132, -15.0473, 1.4412, -9.5915, -15.0473, 1.4412, -9.5915, -4.0957, 1.4851, -14.6132, -15.0952, 1.4461, -14.5061, -15.0952, 1.4461, -14.5061, -4.0957, 1.4851, -14.6132, -11.4871, 1.4589, -14.5412, -4.0495, 1.9502, -9.6984, -4.0479, 1.4801, -9.6986, -14.5081, 1.9131, -9.5965, -14.5081, 1.9131, -9.5965, -4.0479, 1.4801, -9.6986, -15.0489, 1.9112, -9.5913, -15.0489, 1.9112, -9.5913, -4.0479, 1.4801, -9.6986, -15.0473, 1.4412, -9.5915, -4.0974, 1.9551, -14.6125, -4.0495, 1.9502, -9.6984, -11.4884, 1.9289, -14.5405, -11.4884, 1.9289, -14.5405, -4.0495, 1.9502, -9.6984, -14.5565, 1.918, -14.5106, -14.5565, 1.918, -14.5106, -4.0495, 1.9502, -9.6984, -14.5081, 1.9131, -9.5965, -14.5081, 1.9131, -9.5965, -14.5565, 1.918, -14.5106, -14.5081, 1.9131, -9.5965, -14.5081, 1.9131, -9.5965, -14.5565, 1.918, -14.5106, -14.5565, 1.918, -14.5106, -14.5565, 1.918, -14.5106, -14.5081, 1.9131, -9.5965, -14.56, 2.918, -14.5096, -14.56, 2.918, -14.5096, -14.5081, 1.9131, -9.5965, -14.5116, 2.9131, -9.5955, -15.0968, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -15.0968, 1.9161, -14.5054, -15.0968, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -15.0489, 1.9112, -9.5913, -14.56, 2.918, -14.5096, -14.5116, 2.9131, -9.5955, -15.1003, 2.9161, -14.5043, -15.1003, 2.9161, -14.5043, -14.5116, 2.9131, -9.5955, -15.0525, 2.9112, -9.5902, -15.0489, 1.9112, -9.5913, -15.0968, 1.9161, -14.5054, -15.0525, 2.9112, -9.5902, -15.0525, 2.9112, -9.5902, -15.0968, 1.9161, -14.5054, -15.1003, 2.9161, -14.5043, -15.0968, 1.9161, -14.5054, -14.5565, 1.918, -14.5106, -15.1003, 2.9161, -14.5043, -15.1003, 2.9161, -14.5043, -14.5565, 1.918, -14.5106, -14.56, 2.918, -14.5096, -14.5081, 1.9131, -9.5965, -15.0489, 1.9112, -9.5913, -14.5116, 2.9131, -9.5955, -14.5116, 2.9131, -9.5955, -15.0489, 1.9112, -9.5913, -15.0525, 2.9112, -9.5902, -11.4871, 1.4589, -19.5412, -11.4884, 1.9289, -19.5405, -15.0952, 1.4461, -19.5061, -15.0952, 1.4461, -19.5061, -11.4884, 1.9289, -19.5405, -15.0968, 1.9161, -19.5054, -15.0968, 1.9161, -19.5054, -11.4884, 1.9289, -19.5405, -14.5565, 1.918, -19.5106, -15.0952, 1.4461, -14.5061, -11.4871, 1.4589, -14.5412, -15.0952, 1.4461, -19.5061, -15.0952, 1.4461, -19.5061, -11.4871, 1.4589, -14.5412, -11.4871, 1.4589, -19.5412, -14.5565, 1.918, -14.5106, -15.0968, 1.9161, -14.5054, -14.5565, 1.918, -19.5106, -14.5565, 1.918, -19.5106, -15.0968, 1.9161, -14.5054, -15.0968, 1.9161, -19.5054, -11.4871, 1.4589, -14.5412, -11.4884, 1.9289, -14.5405, -11.4871, 1.4589, -19.5412, -11.4871, 1.4589, -19.5412, -11.4884, 1.9289, -14.5405, -11.4884, 1.9289, -19.5405, -11.4884, 1.9289, -14.5405, -14.5565, 1.918, -14.5106, -11.4884, 1.9289, -19.5405, -11.4884, 1.9289, -19.5405, -14.5565, 1.918, -14.5106, -14.5565, 1.918, -19.5106, -15.0968, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -15.0968, 1.9161, -14.5054, -15.0968, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -15.0489, 1.9112, -9.5913, -15.0952, 1.4461, -19.5061, -15.0968, 1.9161, -19.5054, -19.6492, 1.4461, -19.5061, -19.6492, 1.4461, -19.5061, -15.0968, 1.9161, -19.5054, -19.6509, 1.9161, -19.5054, -15.0968, 1.9161, -19.5054, -15.0968, 1.9161, -14.5054, -19.6509, 1.9161, -19.5054, -19.6509, 1.9161, -19.5054, -15.0968, 1.9161, -14.5054, -19.6509, 1.9161, -14.5054, -15.0473, 1.4412, -9.5915, -15.0952, 1.4461, -14.5061, -15.0473, 1.4412, -9.5915, -15.0473, 1.4412, -9.5915, -15.0952, 1.4461, -14.5061, -15.0952, 1.4461, -14.5061, -15.0968, 1.9161, -19.5054, -15.0968, 1.9161, -14.5054, -15.0968, 1.9161, -19.5054, -15.0968, 1.9161, -19.5054, -15.0968, 1.9161, -14.5054, -15.0968, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -15.0473, 1.4412, -9.5915, -15.0489, 1.9112, -9.5913, -15.0489, 1.9112, -9.5913, -15.0473, 1.4412, -9.5915, -15.0473, 1.4412, -9.5915, -15.0952, 1.4461, -19.5061, -15.0968, 1.9161, -19.5054, -15.0952, 1.4461, -19.5061, -15.0952, 1.4461, -19.5061, -15.0968, 1.9161, -19.5054, -15.0968, 1.9161, -19.5054, -19.603, 1.9112, -9.5913, -19.6014, 1.4412, -9.5915, -29.603, 1.9112, -9.5913, -29.603, 1.9112, -9.5913, -19.6014, 1.4412, -9.5915, -29.6014, 1.4412, -9.5915, -20.1509, 1.9161, -19.5054, -19.6509, 1.9161, -19.5054, -20.1509, 2.9161, -19.5054, -20.1509, 2.9161, -19.5054, -19.6509, 1.9161, -19.5054, -19.6509, 2.9161, -19.5054, -15.0968, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -19.6509, 1.9161, -14.5054, -19.6509, 1.9161, -14.5054, -15.0489, 1.9112, -9.5913, -19.6347, 1.9145, -12.8423, -19.6347, 1.9145, -12.8423, -15.0489, 1.9112, -9.5913, -19.603, 1.9112, -9.5913, -15.0473, 1.4412, -9.5915, -15.0952, 1.4461, -14.5061, -19.6014, 1.4412, -9.5915, -19.6014, 1.4412, -9.5915, -15.0952, 1.4461, -14.5061, -19.633, 1.4444, -12.8442, -19.633, 1.4444, -12.8442, -15.0952, 1.4461, -14.5061, -19.6492, 1.4461, -14.5061, -15.0952, 1.4461, -14.5061, -15.0952, 1.4461, -19.5061, -19.6492, 1.4461, -14.5061, -19.6492, 1.4461, -14.5061, -15.0952, 1.4461, -19.5061, -19.6492, 1.4461, -19.5061, -15.0489, 1.9112, -9.5913, -15.0473, 1.4412, -9.5915, -19.603, 1.9112, -9.5913, -19.603, 1.9112, -9.5913, -15.0473, 1.4412, -9.5915, -19.6014, 1.4412, -9.5915, -20.1509, 1.9161, -14.5054, -20.1492, 1.4461, -14.5061, -20.1509, 1.9161, -19.5054, -20.1509, 1.9161, -19.5054, -20.1492, 1.4461, -14.5061, -20.1492, 1.4461, -19.5061, -19.6492, 1.4461, -19.5061, -19.6509, 1.9161, -19.5054, -20.1492, 1.4461, -19.5061, -20.1492, 1.4461, -19.5061, -19.6509, 1.9161, -19.5054, -20.1509, 1.9161, -19.5054, -19.6492, 1.4461, -14.5061, -19.6492, 1.4461, -19.5061, -20.1492, 1.4461, -14.5061, -20.1492, 1.4461, -14.5061, -19.6492, 1.4461, -19.5061, -20.1492, 1.4461, -19.5061, -19.6509, 1.9161, -14.5054, -19.6492, 1.4461, -14.5061, -20.1509, 1.9161, -14.5054, -20.1509, 1.9161, -14.5054, -19.6492, 1.4461, -14.5061, -20.1492, 1.4461, -14.5061, -19.6509, 2.9161, -19.5054, -19.6509, 2.9161, -14.5054, -20.1509, 2.9161, -19.5054, -20.1509, 2.9161, -19.5054, -19.6509, 2.9161, -14.5054, -20.1509, 2.9161, -14.5054, -19.6509, 1.9161, -19.5054, -19.6509, 1.9161, -14.5054, -19.6509, 2.9161, -19.5054, -19.6509, 2.9161, -19.5054, -19.6509, 1.9161, -14.5054, -19.6509, 2.9161, -14.5054, -19.6509, 1.9161, -14.5054, -20.1509, 1.9161, -14.5054, -19.6509, 2.9161, -14.5054, -19.6509, 2.9161, -14.5054, -20.1509, 1.9161, -14.5054, -20.1509, 2.9161, -14.5054, -20.1509, 1.9161, -14.5054, -20.1509, 1.9161, -19.5054, -20.1509, 2.9161, -14.5054, -20.1509, 2.9161, -14.5054, -20.1509, 1.9161, -19.5054, -20.1509, 2.9161, -19.5054, -29.603, 1.9112, -9.5913, -29.6014, 1.4412, -9.5915, -29.6347, 1.9145, -12.8431, -29.6347, 1.9145, -12.8431, -29.6014, 1.4412, -9.5915, -29.633, 1.4444, -12.8443, -19.6347, 1.9145, -12.8423, -19.603, 1.9112, -9.5913, -29.6347, 1.9145, -12.8431, -29.6347, 1.9145, -12.8431, -19.603, 1.9112, -9.5913, -29.603, 1.9112, -9.5913, -29.633, 1.4444, -12.8443, -19.633, 1.4444, -12.8442, -29.6347, 1.9145, -12.8431, -29.6347, 1.9145, -12.8431, -19.633, 1.4444, -12.8442, -19.6347, 1.9145, -12.8423, -19.633, 1.4444, -12.8442, -29.633, 1.4444, -12.8443, -19.6014, 1.4412, -9.5915, -19.6014, 1.4412, -9.5915, -29.633, 1.4444, -12.8443, -29.6014, 1.4412, -9.5915, -19.6347, 1.9145, -12.8423, -19.633, 1.4444, -12.8442, -19.6509, 1.9161, -14.5054, -19.6509, 1.9161, -14.5054, -19.633, 1.4444, -12.8442, -19.6492, 1.4461, -14.5061)

[sub_resource type="BoxShape3D" id="BoxShape3D_xe1ul"]
size = Vector3(300, 1, 300)

[sub_resource type="BoxShape3D" id="BoxShape3D_xqrcm"]
size = Vector3(3, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_c50kn"]
size = Vector3(8, 1, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_qggp3"]
data = PackedVector3Array(-0.125, 3, 2, 0.125, 3, 2, -0.125, -3, 2, 0.125, 3, 2, 0.125, -3, 2, -0.125, -3, 2, 0.125, 3, -2, -0.125, 3, -2, 0.125, -3, -2, -0.125, 3, -2, -0.125, -3, -2, 0.125, -3, -2, 0.125, 3, 2, 0.125, 3, -2, 0.125, -3, 2, 0.125, 3, -2, 0.125, -3, -2, 0.125, -3, 2, -0.125, 3, -2, -0.125, 3, 2, -0.125, -3, -2, -0.125, 3, 2, -0.125, -3, 2, -0.125, -3, -2, 0.125, 3, 2, -0.125, 3, 2, 0.125, 3, -2, -0.125, 3, 2, -0.125, 3, -2, 0.125, 3, -2, -0.125, -3, 2, 0.125, -3, 2, -0.125, -3, -2, 0.125, -3, 2, 0.125, -3, -2, -0.125, -3, -2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kdyfq"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_sa8n8"]
material = SubResource("StandardMaterial3D_kdyfq")
size = Vector3(0.25, 6, 4)

[node name="Game" type="Node3D"]
script = ExtResource("1_efaka")
metadata/level_name = "level1"

[node name="OmniLightBulb" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21.0153, -10.1731)
visible = false
editor_only = true
omni_range = 167.767

[node name="SpotLight1" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
spot_range = 6.72384

[node name="SpotLight2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.35855, 19)
spot_range = 6.72384
spot_angle = 70.3125

[node name="SpotLight3" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3, 5.35855, 26)
visible = false
spot_range = 6.72384
spot_angle = 70.3125

[node name="SpotLight4" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 13, 5.35855, 29)
visible = false
spot_range = 6.72384
spot_angle = 70.3125

[node name="SpotLight5" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 19, 5.35855, 29)
visible = false
spot_range = 6.72384
spot_angle = 70.3125

[node name="SpotLight6" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 28, 5.35855, 26.6)
visible = false
spot_range = 6.72384
spot_angle = 70.3125

[node name="Arrow1" type="Sprite3D" parent="."]
transform = Transform3D(-5.90068e-08, 0.6, 3.3272e-08, 0.205212, -1.10839e-08, 0.563816, 0.563816, 6.68279e-08, -0.205212, -1.25051e-06, 1.2857, 16.6664)
texture = ExtResource("2_2ikme")

[node name="Arrow2" type="Sprite3D" parent="."]
transform = Transform3D(0.6, -3.73108e-08, 6.68279e-08, -3.73108e-08, -0.6, -1.00733e-07, 6.68279e-08, 1.00733e-07, -0.6, -0.660003, 4.7057, 31.6664)
visible = false
texture = ExtResource("2_2ikme")

[node name="ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ground"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("BoxMesh_8pw2q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ground"]
shape = SubResource("BoxShape3D_x47ao")

[node name="Path" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0162113, 0.5, 15.3965)
material_override = SubResource("StandardMaterial3D_7hpab")
mesh = ExtResource("4_0dpsq")

[node name="StaticBody3D" type="StaticBody3D" parent="Path"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_jnyg0")

[node name="Arrow3" type="Sprite3D" parent="."]
transform = Transform3D(0.6, -3.73108e-08, 6.68279e-08, -3.73108e-08, -0.6, -1.00733e-07, 6.68279e-08, 1.00733e-07, -0.6, 14.94, 4.0457, 34.9064)
visible = false
texture = ExtResource("2_2ikme")

[node name="TriggerGameOver" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5, 16, 4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerGameOver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19.3171, 0)
shape = SubResource("BoxShape3D_xe1ul")

[node name="TriggerFinish" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 29.7, 3, 26.6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerFinish"]
shape = SubResource("BoxShape3D_xqrcm")

[node name="Trigger1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 23)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
shape = SubResource("BoxShape3D_c50kn")

[node name="Trigger2" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 14, 3, 28)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger2"]
shape = SubResource("BoxShape3D_c50kn")

[node name="Trigger3" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 19, 3, 32)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger3"]
shape = SubResource("BoxShape3D_c50kn")

[node name="Trigger4" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 28, 3, 27)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger4"]
shape = SubResource("BoxShape3D_c50kn")

[node name="TriggerWallOpen" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 29, 3, 27)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerWallOpen"]
shape = SubResource("BoxShape3D_c50kn")

[node name="Wall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 5, 26.6255)

[node name="Lock" type="Sprite3D" parent="Wall"]
transform = Transform3D(-1.79217e-08, 0, 0.41, 0, 0.41, 0, -0.41, 0, -1.79217e-08, -0.129999, -1.025, 0)
visible = false
texture = ExtResource("4_cf8id")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
shape = SubResource("ConcavePolygonShape3D_qggp3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
mesh = SubResource("BoxMesh_sa8n8")
skeleton = NodePath("")

[connection signal="body_entered" from="TriggerGameOver" to="." method="_on_trigger_game_over_body_entered"]
[connection signal="body_entered" from="TriggerFinish" to="." method="_on_trigger_finish_body_entered"]
[connection signal="body_entered" from="Trigger1" to="." method="_on_trigger_1_body_entered"]
[connection signal="body_entered" from="Trigger2" to="." method="_on_trigger_2_body_entered"]
[connection signal="body_entered" from="Trigger3" to="." method="_on_trigger_3_body_entered"]
[connection signal="body_entered" from="Trigger4" to="." method="_on_trigger_4_body_entered"]
[connection signal="body_entered" from="TriggerWallOpen" to="." method="_on_trigger_wall_open_body_entered"]
[connection signal="body_shape_entered" from="TriggerWallOpen" to="." method="_on_trigger_wall_open_body_shape_entered"]
